<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.rizkyromadon</groupId>
  <artifactId>palang-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Palang Parent</name>
  <description>Cross-cutting concerns toolkit for Spring Boot</description>
  <url>https://github.com/rizkyromadon/palang</url>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>rizkyromadon</id>
      <name>Rizky Romadon</name>
      <url>https://github.com/rizkyromadon</url>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/rizkyromadon/palang.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/rizkyromadon/palang.git</developerConnection>
    <url>https://github.com/rizkyromadon/palang</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <spring-boot.version>3.3.5</spring-boot.version>
  </properties>

  <modules>
    <module>palang-bom</module>
    <module>palang-core</module>
    <module>palang-idempotency-spring-boot-starter</module>
    <module>palang-testkit</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.github.rizkyromadon</groupId>
        <artifactId>palang-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.rizkyromadon</groupId>
        <artifactId>palang-idempotency-spring-boot-starter</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.rizkyromadon</groupId>
        <artifactId>palang-testkit</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <doclint>all,-missing</doclint>
            <quiet>true</quiet>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
